Added parallax content for caves and karsts module in main app framework. Everything working except for some of the layout properties. Need to adjust CSS accordingly to fit bootstrap framework.

--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,7 @@
     <!-- <link rel="stylesheet" href="styles/background-effects.css"> -->
     <!-- <link rel="stylesheet" href="styles/animations.css"> -->
     <link rel="stylesheet" href="styles/angular-carousel.css">
+    <link rel="stylesheet" href="styles/parallax.css">
     <!-- endbuild -->
 </head>
 
