--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
     <!-- <link rel="stylesheet" href="styles/background-effects.css"> -->
     <!-- <link rel="stylesheet" href="styles/animations.css"> -->
     <link rel="stylesheet" href="styles/angular-carousel.css">
-    <link rel="stylesheet" href="styles/parallax.css">
+    <!-- <link rel="stylesheet" href="styles/parallax.css"> -->
     <!-- endbuild -->
 </head>
 
@@ -38,11 +38,12 @@
     <![endif]-->
 
     <!-- Navbar -->
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation" data-ng-controller="HeaderCtrl">
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation" data-ng-controller="HeaderCtrl">
         <div class="container">
             <div class="navbar-header">
                 <img class="img-responsive pull-left eaa-logo" src="./images/eaa_branding/eaa-logo-color.png" />
-                <span class="navbar-brand no-Ibar"><a href="#/">The Aquiferium</a></span>
+                <!-- <span class="navbar-brand no-Ibar"><a href="#/">The Aquiferium</a></span> -->
+                <span class="no-Ibar apptitle">The Aquiferium</span>  
                 <button type="button" class="navbar-toggle" ng-click="isCollapsed = !isCollapsed">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -64,10 +65,8 @@
     </div>
 
     <!-- Views -->
-    <div class="container">
-        <div class="view-animate-container">
-            <div class="view-animate" data-ng-view=""></div>
-        </div>
+    <div class="view-animate-container">
+        <div class="view-animate" data-ng-view=""></div>
     </div>
 
     <!-- Footer -->
@@ -79,6 +78,7 @@
     </div>
 
     <!-- Testing Media Queries - remove before deploying. -->
+    <!-- 
     <div class="testing">
         <div class="test-media-queries">
             <br/>
@@ -88,7 +88,8 @@
             </p>
         </div>
     </div>
-
+     -->
+     
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
     (function(i, s, o, g, r, a, m) {
