Updated all bower components and remoned angular-bootstrap in exchange for bootstrap-sass-official.

--- a/app/index.html
+++ b/app/index.html
@@ -19,15 +19,16 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/aquiferium-base.css">
-    <link rel="stylesheet" href="styles/aquiferium-charts.css">
-    <link rel="stylesheet" href="styles/transitions-angular.css">
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <link rel="stylesheet" type="text/css" href="styles/aquiferium-base.css">
+    <link rel="stylesheet" type="text/css" href="styles/aquiferium-charts.css">
+    <link rel="stylesheet" type="text/css" href="styles/transitions-angular.css">
+    <link rel="stylesheet" type="text/css" href="styles/caves-karsts.css">
     <!-- <link rel="stylesheet" href="styles/transitions-moo.css"> -->
     <!-- <link rel="stylesheet" href="styles/super-awesome-buttons.css"> -->
     <!-- <link rel="stylesheet" href="styles/background-effects.css"> -->
     <!-- <link rel="stylesheet" href="styles/animations.css"> -->
-    <link rel="stylesheet" href="styles/angular-carousel.css">
+    <link rel="stylesheet" type="text/css" href="styles/angular-carousel.css">
     <!-- <link rel="stylesheet" href="styles/parallax.css"> -->
     <!-- endbuild -->
 </head>
@@ -139,7 +140,6 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-mocks/angular-mocks.js"></script>
     <script src="bower_components/angular-scenario/angular-scenario.js"></script>
-    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/jquery.stellar/jquery.stellar.js"></script>
     <script src="bower_components/jquery.easing/js/jquery.easing.min.js"></script>
     <script src="bower_components/jquery-waypoints/waypoints.js"></script>
