--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" type="text/css" href="styles/main.css">
     <link rel="stylesheet" type="text/css" href="styles/aquiferium-base.css">
-    <link rel="stylesheet" type="text/css" href="styles/aquiferium-charts.css">
+    <!-- <link rel="stylesheet" type="text/css" href="styles/aquiferium-charts.css"> -->
     <link rel="stylesheet" type="text/css" href="styles/transitions-angular.css">
     <link rel="stylesheet" type="text/css" href="styles/caves-karsts.css">
     <link rel="stylesheet" type="text/css" href="styles/conservation.css">
@@ -42,30 +42,30 @@
     <![endif]-->
 
     <!-- Navbar -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation" data-ng-controller="NavigationCtrl">
-        <div class="container">
-            <div class="navbar-header">
-                <img class="img-responsive pull-left eaa-logo" src="./images/eaa_branding/eaa-logo-color.png" />
-                <!-- <span class="navbar-brand no-Ibar"><a href="#/">The Aquiferium</a></span> -->
-                <span class="no-Ibar apptitle">The Aquiferium</span>  
-                <button type="button" class="navbar-toggle" ng-click="isCollapsed = !isCollapsed">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
-            <div class="navbar-collapse" ng-class="isCollapsed ? 'collapse' : 'in'">
-                <ul class="nav navbar-nav">
-                    <li ng-class="getClass('/explore')"><a href="#/explore">Explore</a></li>
-                    <li ng-class="getClass('/caves-karsts')"><a href="#/caves-karsts">Caves &amp; Karsts</a></li>
-                    <li ng-class="getClass('/conservation')"><a href="#/conservation">Conservation</a></li>
-                    <li ng-class="getClass('/springs')"><a href="#/springs">Springs</a></li>
-                    <li ng-class="getClass('/about')"><a href="#/about">About</a></li>
-                    <li ng-class="getClass('/contact')"><a href="#/contact">Contact</a></li>
-                </ul>
-            </div>
+    <div id="navbar" class="navbar navbar-default navbar-fixed-top" role="navigation" data-ng-controller="NavigationCtrl">
+      <div class="container">
+        <div class="navbar-header">
+            <img class="img-responsive pull-left eaa-logo" src="./images/eaa_branding/eaa-logo-color.png" />
+            <!-- <span class="navbar-brand no-Ibar"><a href="#/">The Aquiferium</a></span> -->
+            <span class="no-Ibar apptitle">The Aquiferium</span>           
+          <button type="button" class="navbar-toggle" ng-click="isCollapsed = !isCollapsed">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+          </button>
         </div>
+        <div class="navbar-collapse" ng-class="isCollapsed ? 'collapse' : 'in'">
+            <ul class="nav navbar-nav">
+                <li ng-class="getClass('/explore')"><a href="#/explore">Explore</a></li>
+                <li ng-class="getClass('/caves-karsts')"><a href="#/caves-karsts">Caves &amp; Karsts</a></li>
+                <li ng-class="getClass('/conservation')"><a href="#/conservation">Conservation</a></li>
+                <li ng-class="getClass('/springs')"><a href="#/springs">Springs</a></li>
+                <li ng-class="getClass('/about')"><a href="#/about">About</a></li>
+                <li ng-class="getClass('/contact')"><a href="#/contact">Contact</a></li>
+            </ul>
+        </div>
+      </div>
     </div>
 
     <!-- Views -->
@@ -148,6 +148,7 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-carousel/dist/angular-carousel.js"></script>
     <script src="bower_components/angular-parallax/scripts/angular-parallax.js"></script>
+    <script src="bower_components/ng-videosharing-embed/build/ng-videosharing-embed.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
