Additional tweaks to overall design and layout, especially CSS. Removed buton images in lieu of css generated arrows. repositioned content. changed trabsition effect to fade in-out instead of slide until issue with popping content can be resolved.

--- a/app/index.html
+++ b/app/index.html
@@ -161,12 +161,12 @@
     <script src="scripts/controllers/springs-controller.js"></script>
     <script src="scripts/controllers/about-controller.js"></script>
     <script src="scripts/controllers/contact-controller.js"></script>
-    <script src="scripts/directives/d3-geojson-directive.js"></script>
+    <!-- <script src="scripts/directives/d3-geojson-directive.js"></script> -->
     <!-- <script scr>="scripts/directives/view-reset-directive.js"</script> -->
-    <script src="scripts/directives/test-directive-a.js"></script>
-    <script src="scripts/directives/test-directive-b.js"></script>
-    <script src="scripts/directives/tell-time-directive.js"></script>
-    <script src="scripts/directives/donut-chart-directive.js"></script>
+    <!-- <script src="scripts/directives/test-directive-a.js"></script> -->
+    <!-- <script src="scripts/directives/test-directive-b.js"></script> -->
+    <!-- <script src="scripts/directives/tell-time-directive.js"></script> -->
+    <!-- <script src="scripts/directives/donut-chart-directive.js"></script> -->
     <!-- <script src="scripts/directives/bars-chart-directive.js"></script> -->
     <!-- <script src="scripts/controllers/githubChart.js"></script> -->
     <!-- <script src="scripts/directives/gh-visualization-directive.js"></script> -->
