Added in directive for boundaryt interactive base don gauge readings. Updated explore view directive.

--- a/app/index.html
+++ b/app/index.html
@@ -20,18 +20,10 @@
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" type="text/css" href="styles/main.css">
     <link rel="stylesheet" type="text/css" href="styles/aquiferium-base.css">
-    <!-- <link rel="stylesheet" type="text/css" href="styles/aquiferium-charts.css"> -->
     <link rel="stylesheet" type="text/css" href="styles/transitions-angular.css">
     <link rel="stylesheet" type="text/css" href="styles/caves-karsts.css">
     <link rel="stylesheet" type="text/css" href="styles/conservation.css">
     <link rel="stylesheet" type="text/css" href="styles/springs.css">
-    <!-- <link rel="stylesheet" type="text/css" href="styles/angular-carousel.css"> -->
-    <!-- <link rel="stylesheet" href="styles/transitions-moo.css"> -->
-    <!-- <link rel="stylesheet" href="styles/super-awesome-buttons.css"> -->
-    <!-- <link rel="stylesheet" href="styles/background-effects.css"> -->
-    <!-- <link rel="stylesheet" href="styles/animations.css"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="styles/animate.css"> -->
-    <!-- <link rel="stylesheet" href="styles/parallax.css"> -->
     <!-- endbuild -->
 </head>
 <body data-ng-app="aquiferiumApp">
@@ -159,17 +151,10 @@
   <script src="scripts/controllers/springs-controller.js"></script>
   <script src="scripts/controllers/about-controller.js"></script>
   <script src="scripts/controllers/contact-controller.js"></script>
-  <!-- <script src="scripts/directives/d3-geojson-directive.js"></script> -->
-  <!-- <script scr>="scripts/directives/view-reset-directive.js"</script> -->
-  <!-- <script src="scripts/directives/test-directive-a.js"></script> -->
-  <!-- <script src="scripts/directives/test-directive-b.js"></script> -->
-  <!-- <script src="scripts/directives/tell-time-directive.js"></script> -->
   <!-- <script src="scripts/directives/donut-chart-directive.js"></script> -->
-  <!-- <script src="scripts/directives/bars-chart-directive.js"></script> -->
-  <!-- <script src="scripts/controllers/githubChart.js"></script> -->
-  <!-- <script src="scripts/directives/gh-visualization-directive.js"></script> -->
-  <!-- <script src="scripts/controllers/d3Map.js"></script> -->    
-  <!-- <script src="scripts/directives/bootstrap-carousel-directive.js"></script> -->    
+  <!-- <script src="scripts/directives/texas-eaa-aquifers-directive.js"></script> -->
+  <script src="scripts/directives/eaa-aquifers-map-directive.js"></script>
+  <script src="scripts/directives/eaa-aquifers-boundary-map-directive.js"></script>
   <!-- endbuild -->
 </body>
 </html>
