Additional cleanup on directives. Need to replicate the compile property pattern on the Map directive now too.

--- a/app/index.html
+++ b/app/index.html
@@ -60,9 +60,11 @@
   </div>
 
   <!-- Views -->
+  <!-- <div class="container"> -->
   <div class="view-animate-container">
     <div class="view-animate" data-ng-view=""></div>
   </div>
+  <!-- </div> -->
 
   <!-- Footer -->
   <div class="navbar-inverse navbar-fixed-bottom footer centered">
