Added in directive for eaa gauge data chart. Working on integratin ginto Conservation slide. Time scrubber with data display will follow.

--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" type="text/css" href="styles/caves-karsts.css">
     <link rel="stylesheet" type="text/css" href="styles/conservation.css">
     <link rel="stylesheet" type="text/css" href="styles/springs.css">
+    <link rel="stylesheet" type="text/css" href="styles/gauge-data-chart.css">
     <!-- endbuild -->
 </head>
 <body data-ng-app="aquiferiumApp">
@@ -155,6 +156,7 @@
   <script src="scripts/controllers/contact-controller.js"></script>
   <script src="scripts/directives/eaa-aquifers-map-directive.js"></script>
   <script src="scripts/directives/eaa-aquifers-boundary-map-directive.js"></script>
+  <script src="scripts/directives/eaa-gauge-data-chart-directive.js"></script>
   <!-- endbuild -->
 </body>
 </html>
