Created working directive of aquifer gauge data for springs and wells combined. Also started breaking apart into seperate for springs vs wells. Will add a recharge directive last after additional housekeeping. There is an issuein the build with the initial Explore view when deployed. Also still not properly rendering the data slides without refresh despite directive being correct now. Investigate further.

--- a/app/index.html
+++ b/app/index.html
@@ -157,6 +157,8 @@
   <script src="scripts/directives/eaa-aquifers-map-directive.js"></script>
   <script src="scripts/directives/eaa-aquifers-boundary-map-directive.js"></script>
   <script src="scripts/directives/eaa-gauge-data-chart-directive.js"></script>
+  <script src="scripts/directives/eaa-gauge-data-interactive-directive.js"></script>
+  <script src="scripts/directives/eaa-gauge-data-interactive-springs-directive.js"></script>
   <!-- endbuild -->
 </body>
 </html>
