--- a/app/index.html
+++ b/app/index.html
@@ -18,15 +18,24 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
+    <link rel="stylesheet" type="text/css" href="styles/webfonts.css">
     <link rel="stylesheet" type="text/css" href="styles/main.css">
-    <link rel="stylesheet" type="text/css" href="styles/aquiferium-base.css">
-    <link rel="stylesheet" type="text/css" href="styles/transitions-angular.css">
-    <link rel="stylesheet" type="text/css" href="styles/parallax-base.css">
+    <!-- <link rel="stylesheet" type="text/css" href="styles/baseline.css"> -->
+    <link rel="stylesheet" type="text/css" href="styles/general.css">
+    <link rel="stylesheet" type="text/css" href="styles/nav.css">
+    <link rel="stylesheet" type="text/css" href="styles/transitions.css">
+    <link rel="stylesheet" type="text/css" href="styles/parallax.css">
+    <link rel="stylesheet" type="text/css" href="styles/interactives.css">
+    <link rel="stylesheet" type="text/css" href="styles/explore.css">    
     <link rel="stylesheet" type="text/css" href="styles/caves-karsts.css">
     <link rel="stylesheet" type="text/css" href="styles/conservation.css">
     <link rel="stylesheet" type="text/css" href="styles/springs.css">
     <link rel="stylesheet" type="text/css" href="styles/about.css">
-    <link rel="stylesheet" type="text/css" href="styles/gauge-data-chart.css">
+    <link rel="stylesheet" type="text/css" href="styles/mq-small.css">
+    <link rel="stylesheet" type="text/css" href="styles/mq-medium.css">
+    <link rel="stylesheet" type="text/css" href="styles/mq-large.css">
+    <link rel="stylesheet" type="text/css" href="styles/mq-xlarge.css">
+    <link rel="stylesheet" type="text/css" href="styles/mq-hd.css">    
     <!-- endbuild -->
 </head>
 <body data-ng-app="aquiferiumApp">
@@ -40,7 +49,6 @@
     <div class="container">
       <div class="navbar-header">
         <img class="img-responsive pull-left eaa-logo" src="./images/eaa_branding/eaa-logo-color.png" />
-        <!-- <span class="navbar-brand no-Ibar"><a href="#/">The Aquiferium</a></span> -->
         <span class="no-Ibar apptitle">The Aquiferium</span>           
         <button type="button" class="navbar-toggle" ng-click="isCollapsed = !isCollapsed">
           <span class="sr-only">Toggle navigation</span>
