--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
       <div class="navbar-collapse" ng-class="isCollapsed ? 'collapse' : 'in'">
         <ul class="nav navbar-nav">
           <li ng-class="getClass('/explore')"><a href="#/explore">Explore</a></li>
-          <li ng-class="getClass('/caves-karsts')"><a href="#/caves-karsts">Caves &amp; Karsts</a></li>
+          <li ng-class="getClass('/caves-karsts')"><a href="#/caves-karsts">Caves &amp; Karst</a></li>
           <li ng-class="getClass('/conservation')"><a href="#/conservation">Conservation</a></li>
           <li ng-class="getClass('/springs')"><a href="#/springs">Springs</a></li>
           <li ng-class="getClass('/about')"><a href="#/about">About</a></li>
