More overhaul to the CSS, additional content added, address lookup link integrated, some additional layout tweaks.

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" type="text/css" href="styles/conservation.css">
     <link rel="stylesheet" type="text/css" href="styles/springs.css">
     <link rel="stylesheet" type="text/css" href="styles/about.css">
+    <link rel="stylesheet" type="text/css" href="styles/contact.css">
     <link rel="stylesheet" type="text/css" href="styles/mq-small.css">
     <link rel="stylesheet" type="text/css" href="styles/mq-medium.css">
     <link rel="stylesheet" type="text/css" href="styles/mq-large.css">
