--- a/app/index.html
+++ b/app/index.html
@@ -166,6 +166,8 @@
   <script src="scripts/controllers/about-controller.js"></script>
   <script src="scripts/controllers/contact-controller.js"></script>
   <script src="scripts/directives/eaa-aquifers-map-directive.js"></script>
+  <script src="scripts/directives/eaa-gauge-data-interactive-recharge-directive.js"></script>
+  <script src="scripts/directives/eaa-gauge-data-interactive-wells-directive.js"></script>
   <script src="scripts/directives/eaa-gauge-data-interactive-springs-directive.js"></script>
   <!-- endbuild -->
 </body>
