Added src libs into app for skrollr and skrollr-menu.

--- a/app/index.html
+++ b/app/index.html
@@ -153,6 +153,8 @@
   <script src="bower_components/angular-carousel/dist/angular-carousel.js"></script>
   <script src="bower_components/angular-parallax/scripts/angular-parallax.js"></script>
   <script src="bower_components/ng-videosharing-embed/build/ng-videosharing-embed.min.js"></script>
+  <script src="bower_components/skrollr/src/skrollr.js"></script>
+  <script src="bower_components/skrollr-menu/src/skrollr.menu.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
 
@@ -165,6 +167,7 @@
   <script src="scripts/controllers/springs-controller.js"></script>
   <script src="scripts/controllers/about-controller.js"></script>
   <script src="scripts/controllers/contact-controller.js"></script>
+  <script src="scripts/directives/skrollr.dir.js"></script>
   <script src="scripts/directives/eaa-aquifers-map-directive.js"></script>
   <script src="scripts/directives/eaa-gauge-data-interactive-recharge-directive.js"></script>
   <script src="scripts/directives/eaa-gauge-data-interactive-wells-directive.js"></script>
