--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" type="text/css" href="styles/nav.css">
     <link rel="stylesheet" type="text/css" href="styles/transitions.css">
     <link rel="stylesheet" type="text/css" href="styles/parallax.css">
+    <link rel="stylesheet" type="text/css" href="styles/skrollr.css">
     <link rel="stylesheet" type="text/css" href="styles/interactives.css">
     <link rel="stylesheet" type="text/css" href="styles/explore.css">    
     <link rel="stylesheet" type="text/css" href="styles/caves-karsts.css">
