Caves & Karst are fully working and layed out - woohoo. The directive mouseover issue remains but will fix that after geting all the rest of the Aquiferium layout updated the next few days. So close now.

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,10 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <!-- Web Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Exo+2:400,300,700' rel='stylesheet' type='text/css'>
+    <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="styles/main.css">
     <!-- <link rel="stylesheet" type="text/css" href="styles/baseline.css"> -->
     <link rel="stylesheet" type="text/css" href="styles/general.css">
@@ -26,9 +29,10 @@
     <link rel="stylesheet" type="text/css" href="styles/transitions.css">
     <link rel="stylesheet" type="text/css" href="styles/parallax.css">
     <link rel="stylesheet" type="text/css" href="styles/skrollr.css">
+    <link rel="stylesheet" type="text/css" href="styles/skrollr-mq.css">
     <link rel="stylesheet" type="text/css" href="styles/interactives.css">
     <link rel="stylesheet" type="text/css" href="styles/explore.css">    
-    <link rel="stylesheet" type="text/css" href="styles/caves-karsts.css">
+    <!-- <link rel="stylesheet" type="text/css" href="styles/caves-karsts.css"> -->
     <link rel="stylesheet" type="text/css" href="styles/conservation.css">
     <link rel="stylesheet" type="text/css" href="styles/springs.css">
     <link rel="stylesheet" type="text/css" href="styles/about.css">
