Explore view is basically working. Need to add markers and links to sectionsplus overlay boundary regions. ALso cleanup transitions and overall layout.

--- a/app/index.html
+++ b/app/index.html
@@ -37,11 +37,11 @@
     <link rel="stylesheet" type="text/css" href="styles/springs.css">
     <link rel="stylesheet" type="text/css" href="styles/about.css">
     <link rel="stylesheet" type="text/css" href="styles/contact.css">
-    <link rel="stylesheet" type="text/css" href="styles/mq-small.css">
+    <!-- <link rel="stylesheet" type="text/css" href="styles/mq-small.css">
     <link rel="stylesheet" type="text/css" href="styles/mq-medium.css">
     <link rel="stylesheet" type="text/css" href="styles/mq-large.css">
     <link rel="stylesheet" type="text/css" href="styles/mq-xlarge.css">
-    <link rel="stylesheet" type="text/css" href="styles/mq-hd.css">    
+    <link rel="stylesheet" type="text/css" href="styles/mq-hd.css">     -->
     <!-- endbuild -->
 </head>
 <body data-ng-app="aquiferiumApp">
