Background imageon explore module. Better layout. Removed some old css. Further cleanup.

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" type="text/css" href="styles/skrollr.css">
     <link rel="stylesheet" type="text/css" href="styles/skrollr-mq.css">
     <link rel="stylesheet" type="text/css" href="styles/interactives.css">
-    <link rel="stylesheet" type="text/css" href="styles/explore.css">    
+    <!-- <link rel="stylesheet" type="text/css" href="styles/explore.css">     -->
     <!-- <link rel="stylesheet" type="text/css" href="styles/caves-karsts.css"> -->
     <link rel="stylesheet" type="text/css" href="styles/conservation.css">
     <link rel="stylesheet" type="text/css" href="styles/springs.css">
