--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,7 @@
           <li ng-class="getClass('/caves-karsts')"><a href="#/caves-karsts">Caves &amp; Karst</a></li>
           <li ng-class="getClass('/conservation')"><a href="#/conservation">Conservation</a></li>
           <li ng-class="getClass('/springs')"><a href="#/springs">Springs</a></li>
+          <li ng-class="getClass('/maps-data')"><a href="#/maps-data">Maps &amp; Data</a></li>
           <li ng-class="getClass('/about')"><a href="#/about">About</a></li>
           <li ng-class="getClass('/contact')"><a href="#/contact">Contact</a></li>
         </ul>
@@ -175,6 +176,7 @@
   <script src="scripts/directives/eaa-gauge-data-interactive-recharge-directive.js"></script>
   <script src="scripts/directives/eaa-gauge-data-interactive-wells-directive.js"></script>
   <script src="scripts/directives/eaa-gauge-data-interactive-springs-directive.js"></script>
+  <script src="scripts/controllers/maps-data.js"></script>
   <!-- endbuild -->
 </body>
 </html>
