--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" type="text/css" href="styles/skrollr.css">
     <link rel="stylesheet" type="text/css" href="styles/skrollr-mq.css">
     <link rel="stylesheet" type="text/css" href="styles/interactives.css">
+    <link rel="stylesheet" type="text/css" href="styles/maps-data.css">
     <link rel="stylesheet" type="text/css" href="styles/about.css">
     <link rel="stylesheet" type="text/css" href="styles/contact.css">
     <!-- <link rel="stylesheet" type="text/css" href="styles/mq-small.css">
@@ -50,7 +51,7 @@
       <div class="navbar-header">
         <!-- <img class="img-responsive pull-left eaa-logo" src="./images/eaa_branding/eaa-logo-color.png" /> -->
         <!-- <span class="no-Ibar apptitle">The Aquiferium</span> -->
-        <div class="navbar-brand apptitle">The Aquiferium</div>        
+        <div class="no-Ibar navbar-brand apptitle">The Aquiferium</div>        
         <button type="button" class="navbar-toggle" ng-click="isCollapsed = !isCollapsed">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
@@ -73,11 +74,9 @@
   </div>
 
   <!-- Views -->
-  <!-- <div class="container"> -->
   <div class="view-animate-container">
     <div class="view-animate" data-ng-view=""></div>
   </div>
-  <!-- </div> -->
 
   <!-- Footer -->
   <div class="navbar-inverse navbar-fixed-bottom footer centered">
