Tryin gto integrate geojson layers and print functionality still.

--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,7 @@
     <link rel="stylesheet" type="text/css" href="styles/mq-large.css">
     <link rel="stylesheet" type="text/css" href="styles/mq-xlarge.css">
     <link rel="stylesheet" type="text/css" href="styles/mq-hd.css">     -->
+    <link rel="stylesheet" href="bower_components/leaflet-easy-print/easyPrint.css" />
     <!-- endbuild -->
 </head>
 <body data-ng-app="aquiferiumApp">
@@ -157,6 +158,7 @@
   <script src="bower_components/leaflet/dist/leaflet.js"></script>
   <script src="bower_components/leaflet/dist/leaflet-src.js"></script>
   <script src="bower_components/angular-leaflet-directive/dist/angular-leaflet-directive.js"></script>
+  <script src="bower_components/jQuery.print/jQuery.print.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
 
@@ -176,6 +178,7 @@
   <script src="scripts/directives/eaa-gauge-data-interactive-wells-directive.js"></script>
   <script src="scripts/directives/eaa-gauge-data-interactive-springs-directive.js"></script>
   <script src="scripts/controllers/maps-data.js"></script>
+  <script src="bower_components/leaflet-easy-print/leaflet.easyPrint.js"></script>
   <!-- endbuild -->
 </body>
 </html>
