--- a/app/layers-control-test.html
+++ b/app/layers-control-test.html
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
     <!-- <link rel="points" type="application/json" href="./NEW_major_aquifers_dd_reduced100.geo.json"> -->
     <style>
-      html, body, #map {
-        height: 100%;
-        width: 100%;
-        margin: 0px;
-      }
+      body {
+            padding: 0;
+            margin: 0;
+        }
+        html, body, #map {
+            height: 100%;
+            width: 100%;
+        }
     </style>
   </head>
 
@@ -114,7 +117,7 @@
     $.getJSON('./data/geojson/TX.geo.json', function(data) {
       var geojson = L.geoJson(data, {
         style: function (feature) {
-          return { 'opacity' : '0.9', 'fillOpacity' : '0.5', 'fillColor': '#904', 'stroke-width': '1px', 'color': '#409' };
+          return { 'opacity' : '0.9', 'fillOpacity' : '0.9', 'fillColor': '#904', 'stroke-width': '1px', 'color': '#000' };
         },
         onEachFeature: function (feature, layer) {
           layer.bindPopup('Name: ' + feature.properties.name);
@@ -126,7 +129,7 @@
     $.getJSON('./data/geojson/NEW_major_aquifers_dd_reduced100.geo.json', function(data) {
       var geojson = L.geoJson(data, {
         style: function (feature) {
-          return { 'opacity' : '0.9', 'fillOpacity' : '0.5', 'fillColor': '#09c', 'stroke-width': '1px', 'color': '#409' };
+          return { 'opacity' : '0.9', 'fillOpacity' : '0.9', 'fillColor': '#09c', 'stroke-width': '1px', 'color': '#000' };
         },
         onEachFeature: function (feature, layer) {
           layer.bindPopup('Name: ' + feature.properties.AQ_NAME + '<br/> ' + 'Area: ' + feature.properties.AREA + '</br>' + 'Perimeter: ' + feature.properties.PERIMETER);
@@ -138,7 +141,7 @@
     $.getJSON('./data/geojson/eaa_boundary_EPSG-3081.geo.json', function(data) {
       var geojson = L.geoJson(data, {
         style: function (feature) {
-          return { 'opacity' : '0.9', 'fillOpacity' : '0.5', 'fillColor': '#f90', 'stroke-width': '1px', 'color': '#409' };
+          return { 'opacity' : '0.9', 'fillOpacity' : '0.9', 'fillColor': '#f90', 'stroke-width': '1px', 'color': '#000' };
         },
         onEachFeature: function (feature, layer) {
           layer.bindPopup('EAA Boundary Zone');
@@ -150,7 +153,7 @@
     $.getJSON('./data/geojson/eaa-aquifer-zones-2014.geo.json', function(data) {
       var geojson = L.geoJson(data, {
         style: function (feature) {
-          return { 'opacity' : '0.9', 'fillOpacity' : '0.5', 'fillColor': '#0f9', 'stroke-width': '1px', 'color': '#409' };
+          return { 'opacity' : '0.9', 'fillOpacity' : '0.9', 'fillColor': '#0f9', 'stroke-width': '1px', 'color': '#000' };
         },
         onEachFeature: function (feature, layer) {
           layer.bindPopup('Name: ' + feature.properties.Name);
@@ -159,31 +162,58 @@
       geojson.addTo(aquiferZones);
     });
 
-
-    // var mqoLink = '<a href="http://www.mapquest.com/" target="_blank">MapQuest</a>';        
-    // var mqoUrl = 'http://{s}.mqcdn.com/tiles/1.0.0/sat/{z}/{x}/{y}.jpg';
-    // var mqoAttrib = 'Tiles Courtesy of ' + mqoLink + '<img src="http://developer.mapquest.com/content/osm/mq_logo.png">';
-    // var mqoMap = L.tileLayer(mqoUrl, {attribution: mqoAttrib});
+    var mqLink = '<a href="http://www.mapquest.com/">MapQuest</a>';  
+    var mqPic = '<img src="http://developer.mapquest.com/content/osm/mq_logo.png">';      
+    var mqArialUrl = 'http://otile{s}.mqcdn.com/tiles/1.0.0/sat/{z}/{x}/{y}.jpg';
+    var mqosmUrl = 'http://otile{s}.mqcdn.com/tiles/1.0.0/map/{z}/{x}/{y}.jpg';
+    var mqArialAttrib = '&copy; ' + mqArialUrl + '. Tiles courtesy of ' + mqLink + mqPic;
+    var mqosmAttrib = 'Portions Courtesy NASA/JPL-Caltech and U.S. Depart. of Agriculture, Farm Service Agency. Tiles courtesy of ' + mqLink + mqPic;
+    var mqArialMap = L.tileLayer(mqArialUrl, {attribution: mqArialAttrib, subdomains: '1234'});
+    var mqosmMap = L.tileLayer(mqosmUrl, {attribution: mqosmAttrib, subdomains: '1234'});
 
     var osmLink = '<a href="http://openstreetmap.org">OpenStreetMap</a>';
     var osmUrl = 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png';
     var osmAttrib = '&copy; ' + osmLink + ' Contributors';
     var osmMap = L.tileLayer(osmUrl, {attribution: osmAttrib});
 
+    // Performance is poor on this one.
+    var osmBwLink = '<a href="http://openstreetmap.org">OpenStreetMap</a>';
+    var osmBwUrl = 'http://{s}.www.toolserver.org/tiles/bw-mapnik/{z}/{x}/{y}.png';
+    var osmBwAttrib = '&copy; ' + osmBwLink + ' Contributors';
+    var osmBwMap = L.tileLayer(osmBwUrl, {attribution: osmBwAttrib});
+
     var thunLink = '<a href="http://thunderforest.com/">Thunderforest</a>';
-    var landUrl = 'http://{s}.tile.thunderforest.com/landscape/{z}/{x}/{y}\.png';
-    var thunAttrib = '&copy; '+ osmLink +' Contributors & '+ thunLink;    
-    var landMap = L.tileLayer(landUrl, {attribution: thunAttrib});
+    var thunLandscapeUrl = 'http://{s}.tile.thunderforest.com/landscape/{z}/{x}/{y}.png';
+    var thunOutdoorsUrl = 'http://{s}.tile.thunderforest.com/outdoors/{z}/{x}/{y}.png';
+    var thunAttrib = '&copy; ' + osmLink + ' Contributors & ' + thunLink;    
+    var thunLandscapeMap = L.tileLayer(thunLandscapeUrl, {attribution: thunAttrib});
+    var thunOutdoorsMap = L.tileLayer(thunOutdoorsUrl, {attribution: thunAttrib});
+
+    var stamenLink = '<a href="http://stamen.com">Stamen Design</a>';
+    var stamenUrl = 'http://{s}.tile.stamen.com/watercolor/{z}/{x}/{y}.jpg';
+    var stamenAttrib = '&copy; ' + mqLink + ' Contributors & ' + stamenLink;
+    var stamenMap = L.tileLayer(stamenUrl, {attribution: stamenAttrib});
+
+    var esriLink = '<a href="http://www.esri.com/">Esri</a>';
+    var esriWhoLink = 'i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community';
+    var esriUrl = 'http://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}';
+    var esriAttrib = '&copy; ' + esriLink + ', ' + esriWhoLink;
+    var esriMap = L.tileLayer(esriUrl, {attribution: esriAttrib});
 
     var map = L.map('map', {
-      layers: [osmMap] // only add one!
+      layers: [mqArialMap] // only add one!
     })
     .setView([31.555502, -98.959761], 6);
 
     var baseLayers = {
-      // "OMQ Tiles": mqoMap,
+      "MapQuest Arial": mqArialMap,
+      "MapQuest OSM": mqosmMap,
       "OSM Mapnik": osmMap,
-      "Landscape": landMap
+      "OSM BW": osmBwMap,
+      "Landscape": thunLandscapeMap,
+      "Outdoors": thunOutdoorsMap,
+      "Stamen Map": stamenMap,
+      "ESRI World Imagery": esriMap
     };
 
     var overlays = {
