--- a/app/layers-control-test.html
+++ b/app/layers-control-test.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width,  initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>layer control test</title>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
     <!-- <link rel="points" type="application/json" href="./NEW_major_aquifers_dd_reduced100.geo.json"> -->
@@ -224,6 +224,10 @@
     };
 
     L.control.layers(baseLayers,overlays).addTo(map);
+
+    L.control.scale().addTo(map);
+
+    L.Browser.touch = true;
 
     </script>
   </body>
