--- a/app/index.html
+++ b/app/index.html
@@ -156,9 +156,9 @@
   <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tooltip.js"></script>
   <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/popover.js"></script>
   <script src="bower_components/leaflet/dist/leaflet.js"></script>
-  <script src="bower_components/leaflet/dist/leaflet-src.js"></script>
+  <!-- <script src="bower_components/leaflet/dist/leaflet-src.js"></script> -->
   <script src="bower_components/angular-leaflet-directive/dist/angular-leaflet-directive.js"></script>
-  <script src="bower_components/jQuery.print/jQuery.print.js"></script>
+  <!-- <script src="bower_components/jQuery.print/jQuery.print.js"></script> -->
   <!-- endbower -->
   <!-- endbuild -->
 
@@ -170,6 +170,7 @@
   <script src="scripts/controllers/caves-karsts-controller.js"></script>
   <script src="scripts/controllers/conservation-controller.js"></script>
   <script src="scripts/controllers/springs-controller.js"></script>
+  <script src="scripts/controllers/maps-data.js"></script>
   <script src="scripts/controllers/about-controller.js"></script>
   <script src="scripts/controllers/contact-controller.js"></script>
   <script src="scripts/directives/skrollr.dir.js"></script>
@@ -177,8 +178,8 @@
   <script src="scripts/directives/eaa-gauge-data-interactive-recharge-directive.js"></script>
   <script src="scripts/directives/eaa-gauge-data-interactive-wells-directive.js"></script>
   <script src="scripts/directives/eaa-gauge-data-interactive-springs-directive.js"></script>
-  <script src="scripts/controllers/maps-data.js"></script>
-  <script src="bower_components/leaflet-easy-print/leaflet.easyPrint.js"></script>
+  <script src="scripts/directives/leaflet-directive.js"></script>
+  <!-- <script src="bower_components/leaflet-easy-print/leaflet.easyPrint.js"></script> -->
   <!-- endbuild -->
 </body>
 </html>
