--- a/app/index.html
+++ b/app/index.html
@@ -155,9 +155,9 @@
   <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tooltip.js"></script>
   <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/popover.js"></script>
   <script src="bower_components/leaflet/dist/leaflet.js"></script>
-  <!-- <script src="bower_components/leaflet/dist/leaflet-src.js"></script> -->
+  <script src="bower_components/leaflet/dist/leaflet-src.js"></script>
   <script src="bower_components/angular-leaflet-directive/dist/angular-leaflet-directive.js"></script>
-  <!-- <script src="bower_components/jQuery.print/jQuery.print.js"></script> -->
+  <script src="bower_components/jQuery.print/jQuery.print.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
 
