Changed the navbar to inverse for better uniformity of UI. Matched color in footer text. Reviewing for draggable mask addition.

--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
   <![endif]-->
 
   <!-- Navbar -->
-  <div id="navbar" class="navbar navbar-default navbar-fixed-top" role="navigation" data-ng-controller="NavigationCtrl">
+  <div id="navbar" class="navbar-inverse navbar-default navbar-fixed-top" role="navigation" data-ng-controller="NavigationCtrl">
   <!-- Navbar -->
     <div class="container">
       <div class="navbar-header">
@@ -138,7 +138,7 @@
   <script src="bower_components/angular-parallax/scripts/angular-parallax.js"></script>
   <script src="bower_components/ng-videosharing-embed/build/ng-videosharing-embed.min.js"></script>
   <script src="bower_components/d3/d3.js"></script>
-  <script src="bower_components/jquery.easing/js/jquery.easing.min.js"></script>
+  <script src="bower_components/jquery.easing/js/jquery.easing.js"></script>
   <script src="bower_components/jquery-waypoints/waypoints.js"></script>
   <script src="bower_components/skrollr/src/skrollr.js"></script>
   <script src="bower_components/gsap/src/uncompressed/TweenMax.js"></script>
@@ -160,6 +160,10 @@
   <script src="bower_components/jQuery.print/jQuery.print.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
+
+  <!-- non-bower 3rd party libraries. -->
+  <script src="bower_components/skrollr-menu/dist/skrollr.menu.min.js"></script>
+  <script src="bower_components/leaflet-tilelayer-geojson/TileLayer.GeoJSON.js"></script>
 
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
   <script src="scripts/app.js"></script>
